gitops/core/kube-prometheus-stack/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-ui
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus
  oidc:
    provider:
      issuer: https://login.menghi.uy/dex/
    clientID: envoy-gateway
    clientSecret:
      name: dex-envoy-client
    redirectURL: "https://prometheus.menghi.uy/oauth2/callback"
    logoutPath: "/logout"
